--- a/index.html
+++ b/index.html
@@ -1,12 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Restaurant_Menu</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="icons8-restaurant-menu-48.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Mozilla+Text:wght@200..700&family=Playfair+Display+SC:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <div class="container">
+        <header class="hero">
+            <div class="hero-left">
+                <img src="Restaurant Dish.webp" alt="Restaurant_Dish">
+            </div>
+            <div class="hero-right">
+                <h1>RESTAURANT<br><span>MENU</span></h1>
+            </div>
+        </header>
+        <main>
+            <section class="menu-section">
+                <div class="menu-left">
+                    <h2>BREAKFAST</h2>
+                    <ul>
+                        <li>Eggs Benedict <span>$4.99</span></li>
+                        <li>Waffle Fresh Berries <span>$3.99</span></li>
+                        <li>Porridge with Cherries <span>$6.99</span></li>
+                    </ul>
+                </div>
+                <div class="menu-right">
+                    <img src="Breakfast.jpg" alt="Breakfast">
+                </div>
+            </section>
+            <section class="menu-section">
+                <div class="menu-left">
+                    <h2>MAIN</h2>
+                    <ul>
+                        <li>Grilled Salmon <span>$12.99</span></li>
+                        <li>Steak with Fries <span>$15.49</span></li>
+                        <li>Chicken Alfredo <span>$11.50</span></li>
+                    </ul>
+                </div>
+                <div class="menu-right">
+                    <img src="Main Course.jpg" alt="Main">
+                </div>
+            </section>
+            <section class="menu-section">
+                <div class="menu-left">
+                    <h2>SALAD</h2>
+                    <ul>
+                        <li>Caesar Salad <span>$7.25</span></li>
+                        <li>Greek Salad <span>$6.50</span></li>
+                        <li>Avocado Salad <span>$8.20</span></li>
+                    </ul>
+                </div>
+                <div class="menu-right">
+                    <img src="Salads.jpg" alt="Salad">
+                </div>
+            </section>
+            <div class="contact">
+                <h4>Contact</h4>
+                <p>📍 Sylhet, Bangladesh</p>
+                <p>📞 +880 1312570514</p>
+                <p>✉️ saimahaque868@gmail.com</p>
+            </div>
+        </main>
+        <footer>&copy; 2025 Saima Sultana. All rights reserved.</footer>
+    </div>
 </body>
+
 </html>
